@@ -280,6 +280,34 @@ _gcry_mpi_set( gcry_mpi_t w, gcry_mpi_t u)
     w->sign = usign;
 }
 
+gcry_err_code_t
+_gcry_mpi_get_ui (gcry_mpi_t w, unsigned long *u)
+{
+  gcry_err_code_t err = GPG_ERR_NO_ERROR;
+  unsigned long x = 0;
+
+  if (w->nlimbs > 1)
+    err = GPG_ERR_TOO_LARGE;
+  else if (w->nlimbs == 1)
+    x = w->d[0];
+  else
+    x = 0;
+
+  if (! err)
+    *u = x;
+  
+  return err;
+}
+
+gcry_error_t
+gcry_mpi_get_ui (gcry_mpi_t w, unsigned long *u)
+{
+  gcry_err_code_t err = GPG_ERR_NO_ERROR;
+
+  err = _gcry_mpi_get_ui (w, u);
+  
+  return gcry_error (err);
+}
 
 void
 _gcry_mpi_set_ui( gcry_mpi_t w, unsigned long u)
@@ -360,7 +388,6 @@ gcry_mpi_set_ui( gcry_mpi_t w, unsigned long u )
     _gcry_mpi_set_ui( w, u );
     return w;
 }
-
 
 void
 gcry_mpi_randomize( gcry_mpi_t w,
